Fixes white/dark mode search (#9307)

--- a/http_src/views/private/clients/dark-mode.scss
+++ b/http_src/views/private/clients/dark-mode.scss
@@ -5,10 +5,6 @@ body,
   color: #E2E2E2;
 }
 
-input {
-  color: #E2E2E2;
-}
-
 code {
   color: #F8F8F2 !important;
 }
