--- a/http_src/views/private/clients/white-mode.scss
+++ b/http_src/views/private/clients/white-mode.scss
@@ -1254,3 +1254,7 @@ a.disabled{
     pointer-events: none;
     cursor: default;
 }
+
+.input {
+  color: var(--ntop-text-color);
+}
